Uploading new codebase

--- a/Uddin_Mohammad Ashraf_B00092213/dvd.html
+++ b/Uddin_Mohammad Ashraf_B00092213/dvd.html
@@ -47,11 +47,36 @@
 </header>
 </body>
 <div class="bodybackground">
-<p>Empire is an American musical drama television series. It was debuted on Fox on January 7, 2015. Empire is about hip hop music and entertainment company, Empire Entertainment, and the drama among the members of the founders' family.They fight for control of the company. Lee Daniels and Danny Strong created this show, and stars Terrence Howard and Taraji P. Henson.
-On January 17, 2015, Empire was renewed for an 18-episode second season, which premiered on September 23, 2015.</p>
-<center>
-<img class="centreimage" src="image/image_centre.png" alt="Empire"/>
-</center>
+<div class="tabletop">
+<div class="table1"><img class="table1img" src="image/image_centre.png" alt="Empire"/></div>
+<div class="table2">
+<h2>Empire DVD</h2>
+<div itemprop="description">Empire DVD for season 1 is available now.</div></div>
+<div class="table3">
+<div><h2>&euro;99.99</h2><p><br/><br/><br/><br/><a class="btn" href="#">Buy now</a></p></div>
+</div>
+<hr>
+</div>
+<div class="tabletop">
+<div class="table1"><img class="table1img" src="image/dvd.jpg" alt="Empire"/></div>
+<div class="table2">
+<h2>Empire DVD</h2>
+<div itemprop="description">Empire DVD for season 1, Episodes 1 to 6 is available now.</div>
+</div>
+<div class="table3">
+<div><h2>&euro;64.99</h2><p><br/><br/><br/><br/><a class="btn" href="#">Buy now</a></p></div>
+</div>
+</div>
+<hr>
+<div class="tabletop">
+<div class="table1"><img class="table1img" src="image/dvd2.jpg" alt="Empire"/></div>
+<div class="table2">
+<h2>Empire DVD</h2>
+<div itemprop="description">Empire DVD for season 1, Episodes 7 to 12 is available now.</div></div>
+<div class="table3">
+<div><h2>&euro;64.99</h2><p><br/><br/><br/><br/><a class="btn" href="#">Buy now</a></p></div>
+</div>
+</div>
 
 </div>
 <footer>
