--- a/Uddin_Mohammad Ashraf_B00092213/episodes.html
+++ b/Uddin_Mohammad Ashraf_B00092213/episodes.html
@@ -51,9 +51,11 @@
 <div class="table1"><img class="table1img" src="image/image_centre.png" alt="Empire"/></div>
 <div class="table2">
 <h2>The Outspoken King(Episode 2)</h2>
-<div itemprop="description">Team Cookie or Team Lucious? Support your favorite Lyon with this official Team Cookie Tee. <ul style="margin:0px !important"><li>Cap Sleeve Tee (Round Neck)</li><li>100% Cotton Screen Print Tee</li><li>Sizes XS, S, M, L, XL, XXL</li></ul></div></div>
+<div itemprop="description">Andre has to go to the doctor, tiana and hakken are friend now, someone found bunkies body, hakken and jamal perform together at laviticus, cookie is afraid about finish your deal with the cops.
+
+</div></div>
 <div class="table3">
-<div><br/><br/><br/><br/><br/><br/><br/><br/><a class="btn" href="lucious.html">View Bio</a></p></div>
+<div><br/><br/><br/><br/><br/><br/><br/><br/><a class="btn" href="the-outspoken-king.html">View Bio</a></p></div>
 </div>
 <hr>
 </div>
@@ -61,10 +63,11 @@
 <div class="table1"><img class="table1img" src="image/teraji_bio.jpg" alt="Empire"/></div>
 <div class="table2">
 <h2>False Imposition(Eposod 4)</h2>
-<div itemprop="description">Cookie makes it clear that a Lyoness will do anything it takes to protect her pride.<ul style="margin:0px"><li>Pullover Hoodie</li><li>50% Polyester 50 % Cotton</li><li>Sizes XS, S, M, L, XL, XXL</li></ul></div>
+<div itemprop="description">Empire wants the rapper Titan, but it is not easy, Hakeem hang out with camila and tiana but they do not know about each other, Tiana perform with Hakeem even when she found out Hakeem with Camilla.
+</div>
 </div>
 <div class="table3">
-<div><br/><br/><br/><br/><br/><br/><br/><br/><a class="btn" href="cookie.html">View Bio</a></p></div>
+<div><br/><br/><br/><br/><br/><br/><br/><br/><a class="btn" href="false-imposition.html">View Bio</a></p></div>
 </div>
 </div>
 <hr>
@@ -72,9 +75,10 @@
 <div class="table1"><img class="table1img" src="image/bryshere_bio.jpg" alt="Empire"/></div>
 <div class="table2">
 <h2>Out, Damned Spot(Episode 6)</h2>
-<div itemprop="description">The sleek jacket features a satin finish with the Lucious Lyon logo so it's clear that you're a serious Empire fan.<ul style="margin:0px !important"><li>Front button closure</li><li>Striped rim trim at baseball collar and cuffs</li><li>Sizes XS, S, M, L, XL, XXL </li></ul></div></div>
+<div itemprop="description">Lucious is investigated by detective Walker. Vernon,Alibi and Andre finds out that Lucious killed Bunkie. Someone receive money to be the killer of Bunkie, Lucios try be alive, jamal get a great song, the ex wife of jamar arrive with a little girl.
+</div></div>
 <div class="table3">
-<div><br/><br/><br/><br/><br/><br/><br/><br/><a class="btn" href="hakken.html">View Bio</a></p></div>
+<div><br/><br/><br/><br/><br/><br/><br/><br/><a class="btn" href="out-damned-spot.html">View Bio</a></p></div>
 </div>
 </div>
 <hr>
