--- a/Uddin_Mohammad Ashraf_B00092213/false-imposition.html
+++ b/Uddin_Mohammad Ashraf_B00092213/false-imposition.html
@@ -53,9 +53,7 @@
 </div>
 <div class="right">
 <h1>False Imposition(Eposod 4)</h1>
-<p>Lucious Lyon is a fictional character from the American musical drama Empire on Fox, portrayed by Terrence Howard. Lucious is the main protagonist and anti-hero of the series.[1] Created by Lee Daniels and Danny Strong, Lucious is the founder and CEO of Empire Entertainment, a world famous and renowned record company that he runs with his family. Realizing he will need a successor after he is diagnosed with ALS, Lucious pits his three sons—the college educated executive Andre Lyon (Trai Byers), the talented and singer/songwriter Jamal (Jussie Smollett) and youngest rapper Hakeem (Bryshere Y. Gray) -- against one another.[2] The story parallels William Shakespeare's King Lear and James Goldman's The Lion in Winter.
-The company is preparing to go public on the NYSE. However, Lucious must contend with his ex-wife Cookie (Taraji P. Henson) upon her release from prison as she demands her piece of the company. He also struggles with Jamal's sexuality and Hakeem's inability to step up to the plate and show maturity as an artist. At the same time, Lucious neglects Andre seemingly due to his lack of musical ability. Lucious and Cookie's love for each other further complicates his existing relationship with his head of A&R, Anika Calhoun (Grace Gealey). The character of Lucious who starts out selling drugs as a teenager and develops into a well respected rapper and music mogul is loosely based on several real life figures from rappers, record producers, to politicians with a criminal past.[5][6]</p>
-
+<p>Empire wants the rapper Titan, but it is not easy, Hakeem hang out with camila and tiana but they do not know about each other, Tiana perform with Hakeem even when she found out Hakeem with Camilla.
 
 </div>
 </div>
