--- a/Uddin_Mohammad Ashraf_B00092213/hakken.html
+++ b/Uddin_Mohammad Ashraf_B00092213/hakken.html
@@ -24,7 +24,7 @@
 			<ul>
 				<li><a href="lucious.html">Lucios Lyon</a></li>
 				<li><a href="cookie.html">Cookie Lyon</a></li>
-				<li><a href="hakken.html">Hakken Lyon</a></li>					
+				<li><a href="hakken.html">Hakken Lyon</a></li>
 			</ul>
 		</li>
 		<li><a href="gallery.html" >Gallery</a></li>
@@ -33,20 +33,20 @@
 				<li><a href="the-outspoken-king.html">The Outspoken King</a></li>
 				<li><a href="false-imposition.html">False Imposition</a></li>
 				<li><a href="out-damned-spot.html">Out Damned Spot</a></li>
-			</ul>				
+			</ul>
 		</li>
 		<li><a href="merchandise.html" class="last">Merchandise</a>
 			<ul>
 				<li><a href="shirt.html">Tee Shirt</a></li>
 				<li><a href="mug.html">Mug</a></li>
 				<li><a href="dvd.html">DVD Set</a></li>
-			</ul>				
+			</ul>
 		</li>
 	</ul>
 </nav>
 </header>
 </body>
-<div class="bodybackground"> 
+<div class="bodybackground">
 <div class="left">
 <div class="lefttop"><img class="leftbio" src="image/bryshere_bio.jpg" alt="Empire"/></div>
 <div class="leftbottom">
@@ -69,8 +69,7 @@
 </div>
 <div class="right">
 <h1>Hakeem Lyon</h1>
-<p>Hakeem Lyon is a fictional character from the original FOX musical drama, Empire played by Bryshere Y. Gray. Hakeem is one of the main characters within the series and the youngest son of hip-hop mogul Lucious (Terrence Howard) and his ex-wife Cookie (Taraji P. Henson). Hakeem has the star quality to become a superstar like his father, but lacks the discipline and guidance because of his strained relationship with Cookie.</p>
-
+<p>Hakken Lyon is the Son of Lucios Lyon and Cookie Lyon. Hakken Lyon is now an almost famous rapper but do not respect people so much and do not wants people telling what he has to do,all the time he is with a different girl, but he just want to be the rapper number 1.
 
 </div>
 </div>
