--- a/Uddin_Mohammad Ashraf_B00092213/lucious.html
+++ b/Uddin_Mohammad Ashraf_B00092213/lucious.html
@@ -24,7 +24,7 @@
 			<ul>
 				<li><a href="lucious.html">Lucios Lyon</a></li>
 				<li><a href="cookie.html">Cookie Lyon</a></li>
-				<li><a href="hakken.html">Hakken Lyon</a></li>					
+				<li><a href="hakken.html">Hakken Lyon</a></li>
 			</ul>
 		</li>
 		<li><a href="gallery.html" >Gallery</a></li>
@@ -33,20 +33,20 @@
 				<li><a href="the-outspoken-king.html">The Outspoken King</a></li>
 				<li><a href="false-imposition.html">False Imposition</a></li>
 				<li><a href="out-damned-spot.html">Out Damned Spot</a></li>
-			</ul>				
+			</ul>
 		</li>
 		<li><a href="merchandise.html" class="last">Merchandise</a>
 			<ul>
 				<li><a href="shirt.html">Tee Shirt</a></li>
 				<li><a href="mug.html">Mug</a></li>
 				<li><a href="dvd.html">DVD Set</a></li>
-			</ul>				
+			</ul>
 		</li>
 	</ul>
 </nav>
 </header>
 </body>
-<div class="bodybackground"> 
+<div class="bodybackground">
 <div class="left">
 <div class="lefttop"><img class="leftbio" src="image/terrance_bio.jpg" alt="Empire"/></div>
 <div class="leftbottom">
@@ -69,8 +69,7 @@
 </div>
 <div class="right">
 <h1>Lucious Lyon</h1>
-<p>Lucious Lyon is a fictional character from the American musical drama Empire on Fox, portrayed by Terrence Howard. Lucious is the main protagonist and anti-hero of the series.[1] Created by Lee Daniels and Danny Strong, Lucious is the founder and CEO of Empire Entertainment, a world famous and renowned record company that he runs with his family. Realizing he will need a successor after he is diagnosed with ALS, Lucious pits his three sons—the college educated executive Andre Lyon (Trai Byers), the talented and singer/songwriter Jamal (Jussie Smollett) and youngest rapper Hakeem (Bryshere Y. Gray) -- against one another.[2] The story parallels William Shakespeare's King Lear and James Goldman's The Lion in Winter.
-The company is preparing to go public on the NYSE. However, Lucious must contend with his ex-wife Cookie (Taraji P. Henson) upon her release from prison as she demands her piece of the company. He also struggles with Jamal's sexuality and Hakeem's inability to step up to the plate and show maturity as an artist. At the same time, Lucious neglects Andre seemingly due to his lack of musical ability. Lucious and Cookie's love for each other further complicates his existing relationship with his head of A&R, Anika Calhoun (Grace Gealey). The character of Lucious who starts out selling drugs as a teenager and develops into a well respected rapper and music mogul is loosely based on several real life figures from rappers, record producers, to politicians with a criminal past.[5][6]</p>
+<p>Lucious Lyon is a main character of  the American musical drama Empire on Fox, portrayed by Terrence Howard. The main character, Lucios Lyon is a famous rapper which build his company Empire Records with his ex-wife Cookie Lyon and he wanna be powerfull day by day, for this he want to the help of his son Hakeem Lyon. He is also struggling with Jamal's sexuality and Hakeem's inability to step up to the plate and show the  maturity as an artist.</p>
 
 
 </div>
