--- a/Uddin_Mohammad Ashraf_B00092213/mug.html
+++ b/Uddin_Mohammad Ashraf_B00092213/mug.html
@@ -47,11 +47,36 @@
 </header>
 </body>
 <div class="bodybackground">
-<p>Empire is an American musical drama television series. It was debuted on Fox on January 7, 2015. Empire is about hip hop music and entertainment company, Empire Entertainment, and the drama among the members of the founders' family.They fight for control of the company. Lee Daniels and Danny Strong created this show, and stars Terrence Howard and Taraji P. Henson.
-On January 17, 2015, Empire was renewed for an 18-episode second season, which premiered on September 23, 2015.</p>
-<center>
-<img class="centreimage" src="image/image_centre.png" alt="Empire"/>
-</center>
+<div class="tabletop">
+<div class="table1"><img class="table1img" src="image/empire-mug-936_272.jpg" alt="Empire"/></div>
+<div class="table2">
+<h2>Empire Logo Mug</h2>
+<div itemprop="description"> Support your favorite Empire Tv serial show with this official Empire Logo Mug. </div></div>
+<div class="table3">
+<div><h2>&euro;4.99</h2><p><br/><br/><br/><br/><a class="btn" href="#">Buy now</a></p></div>
+</div>
+<hr>
+</div>
+<div class="tabletop">
+<div class="table1"><img class="table1img" src="image/mug.jpg" alt="Empire"/></div>
+<div class="table2">
+<h2>Empire Team Cookie Mug</h2>
+<div itemprop="description">Team Cookie or Team Lucious? Support your favorite Lyon with this official Team Cookie Mug.</div>
+</div>
+<div class="table3">
+<div><h2>&euro;5.99</h2><p><br/><br/><br/><br/><a class="btn" href="#">Buy now</a></p></div>
+</div>
+</div>
+<hr>
+<div class="tabletop">
+<div class="table1"><img class="table1img" src="image/mug1.jpg" alt="Empire"/></div>
+<div class="table2">
+<h2>Empire Team Lucios Lyon Mug</h2>
+<div itemprop="description">Team Cookie or Team Lucious? Support your favorite Lyon with this official Team Lucios Mug.</div></div>
+<div class="table3">
+<div><h2>&euro;5.99</h2><p><br/><br/><br/><br/><a class="btn" href="#">Buy now</a></p></div>
+</div>
+</div>
 
 </div>
 <footer>
