--- a/Uddin_Mohammad Ashraf_B00092213/shirt.html
+++ b/Uddin_Mohammad Ashraf_B00092213/shirt.html
@@ -47,11 +47,36 @@
 </header>
 </body>
 <div class="bodybackground">
-<p>Empire is an American musical drama television series. It was debuted on Fox on January 7, 2015. Empire is about hip hop music and entertainment company, Empire Entertainment, and the drama among the members of the founders' family.They fight for control of the company. Lee Daniels and Danny Strong created this show, and stars Terrence Howard and Taraji P. Henson.
-On January 17, 2015, Empire was renewed for an 18-episode second season, which premiered on September 23, 2015.</p>
-<center>
-<img class="centreimage" src="image/image_centre.png" alt="Empire"/>
-</center>
+<div class="tabletop">
+<div class="table1"><img class="table1img" src="image/cookie.jpg" alt="Empire"/></div>
+<div class="table2">
+<h2>Empire Team Cookie Women's T-Shirt</h2>
+<div itemprop="description">Team Cookie or Team Lucious? Support your favorite Lyon with this official Team Cookie Tee. <ul style="margin:0px !important"><li>Cap Sleeve Tee (Round Neck)</li><li>100% Cotton Screen Print Tee</li><li>Sizes XS, S, M, L, XL, XXL</li></ul></div></div>
+<div class="table3">
+<div><h2>&euro;29.99</h2><p><br/><br/><br/><br/><a class="btn" href="#">Buy now</a></p></div>
+</div>
+<hr>
+</div>
+<div class="tabletop">
+<div class="table1"><img class="table1img" src="image/empire-lyon-dynasty-hoodie-093_670.jpg" alt="Empire"/></div>
+<div class="table2">
+<h2>Empire Lyon Dynasty Hoodie</h2>
+<div itemprop="description">Cookie makes it clear that a Lyoness will do anything it takes to protect her pride.<ul style="margin:0px"><li>Pullover Hoodie</li><li>50% Polyester 50 % Cotton</li><li>Sizes XS, S, M, L, XL, XXL</li></ul></div>
+</div>
+<div class="table3">
+<div><h2>&euro;64.95</h2><p><br/><br/><br/><br/><a class="btn" href="#">Buy now</a></p></div>
+</div>
+</div>
+<hr>
+<div class="tabletop">
+<div class="table1"><img class="table1img" src="image/empire-logo-crop-varsity-womens-jacket_670.jpg" alt="Empire"/></div>
+<div class="table2">
+<h2>Empire Team Cookie Women's T-Shirt</h2>
+<div itemprop="description">The sleek jacket features a satin finish with the Lucious Lyon logo so it's clear that you're a serious Empire fan.<ul style="margin:0px !important"><li>Front button closure</li><li>Striped rim trim at baseball collar and cuffs</li><li>Sizes XS, S, M, L, XL, XXL </li></ul></div></div>
+<div class="table3">
+<div><h2>&euro;185.99</h2><p><br/><br/><br/><br/><a class="btn" href="#">Buy now</a></p></div>
+</div>
+</div>
 
 </div>
 <footer>
