--- a/Uddin_Mohammad Ashraf_B00092213/cast.html
+++ b/Uddin_Mohammad Ashraf_B00092213/cast.html
@@ -24,7 +24,7 @@
 			<ul>
 				<li><a href="lucious.html">Lucios Lyon</a></li>
 				<li><a href="cookie.html">Cookie Lyon</a></li>
-				<li><a href="hakken.html">Hakken Lyon</a></li>					
+				<li><a href="hakken.html">Hakken Lyon</a></li>
 			</ul>
 		</li>
 		<li><a href="gallery.html" >Gallery</a></li>
@@ -33,25 +33,25 @@
 				<li><a href="the-outspoken-king.html">The Outspoken King</a></li>
 				<li><a href="false-imposition.html">False Imposition</a></li>
 				<li><a href="out-damned-spot.html">Out Damned Spot</a></li>
-			</ul>				
+			</ul>
 		</li>
 		<li><a href="merchandise.html" class="last">Merchandise</a>
 			<ul>
 				<li><a href="shirt.html">Tee Shirt</a></li>
 				<li><a href="mug.html">Mug</a></li>
 				<li><a href="dvd.html">DVD Set</a></li>
-			</ul>				
+			</ul>
 		</li>
 	</ul>
 </nav>
 </header>
 </body>
-<div class="bodybackground" style="height:1040px"> 
+<div class="bodybackground" style="height:1040px">
 <div class="tabletop">
 <div class="table1"><img class="table1img" src="image/terrance_bio.jpg" alt="Empire"/></div>
 <div class="table2">
 <h2>Lucious Lyon</h2>
-<div itemprop="description">Team Cookie or Team Lucious? Support your favorite Lyon with this official Team Cookie Tee. <ul style="margin:0px !important"><li>Cap Sleeve Tee (Round Neck)</li><li>100% Cotton Screen Print Tee</li><li>Sizes XS, S, M, L, XL, XXL</li></ul></div></div>
+<div itemprop="description">Lucious Lyon is a main character of  the American musical drama Empire on Fox, portrayed by Terrence Howard. The main character, Lucios Lyon is a famous rapper which build his company Empire Records with his ex-wife Cookie Lyon and he wanna be powerfull day by day, for this he want to the help of his son Hakeem Lyon. He is also struggling with Jamal's sexuality and Hakeem's inability to step up to the plate and show the  maturity as an artist.</div></div>
 <div class="table3">
 <div><br/><br/><br/><br/><br/><br/><br/><br/><a class="btn" href="lucious.html">View Bio</a></p></div>
 </div>
@@ -61,7 +61,8 @@
 <div class="table1"><img class="table1img" src="image/teraji_bio.jpg" alt="Empire"/></div>
 <div class="table2">
 <h2>Cookie Lyon</h2>
-<div itemprop="description">Cookie makes it clear that a Lyoness will do anything it takes to protect her pride.<ul style="margin:0px"><li>Pullover Hoodie</li><li>50% Polyester 50 % Cotton</li><li>Sizes XS, S, M, L, XL, XXL</li></ul></div>
+<div itemprop="description">Cookie Lyon is Lucios Lyon ex-wife, she did wrong things, drug things to help build Empire Records 17 years ago. And lived at prison for all this years, now she is free e wants her half or be the owner with Lucios Lucios, and produce many artists from Empire Records.
+.</div>
 </div>
 <div class="table3">
 <div><br/><br/><br/><br/><br/><br/><br/><br/><a class="btn" href="cookie.html">View Bio</a></p></div>
@@ -72,7 +73,7 @@
 <div class="table1"><img class="table1img" src="image/bryshere_bio.jpg" alt="Empire"/></div>
 <div class="table2">
 <h2>Hakeem Lyon</h2>
-<div itemprop="description">The sleek jacket features a satin finish with the Lucious Lyon logo so it's clear that you're a serious Empire fan.<ul style="margin:0px !important"><li>Front button closure</li><li>Striped rim trim at baseball collar and cuffs</li><li>Sizes XS, S, M, L, XL, XXL </li></ul></div></div>
+<div itemprop="description">Hakken Lyon is the Son of Lucios Lyon and Cookie Lyon. Hakken Lyon is now an almost famous rapper but do not respect people so much and do not wants people telling what he has to do,all the time he is with a different girl, but he just want to be the rapper number 1.</div></div>
 <div class="table3">
 <div><br/><br/><br/><br/><br/><br/><br/><br/><a class="btn" href="hakken.html">View Bio</a></p></div>
 </div>
