--- a/Uddin_Mohammad Ashraf_B00092213/cookie.html
+++ b/Uddin_Mohammad Ashraf_B00092213/cookie.html
@@ -24,7 +24,7 @@
 			<ul>
 				<li><a href="lucious.html">Lucios Lyon</a></li>
 				<li><a href="cookie.html">Cookie Lyon</a></li>
-				<li><a href="hakken.html">Hakken Lyon</a></li>					
+				<li><a href="hakken.html">Hakken Lyon</a></li>
 			</ul>
 		</li>
 		<li><a href="gallery.html" >Gallery</a></li>
@@ -33,20 +33,20 @@
 				<li><a href="the-outspoken-king.html">The Outspoken King</a></li>
 				<li><a href="false-imposition.html">False Imposition</a></li>
 				<li><a href="out-damned-spot.html">Out Damned Spot</a></li>
-			</ul>				
+			</ul>
 		</li>
 		<li><a href="merchandise.html" class="last">Merchandise</a>
 			<ul>
 				<li><a href="shirt.html">Tee Shirt</a></li>
 				<li><a href="mug.html">Mug</a></li>
 				<li><a href="dvd.html">DVD Set</a></li>
-			</ul>				
+			</ul>
 		</li>
 	</ul>
 </nav>
 </header>
 </body>
-<div class="bodybackground"> 
+<div class="bodybackground">
 <div class="left">
 <div class="lefttop"><img class="leftbio" src="image/teraji_bio.jpg" alt="Empire"/></div>
 <div class="leftbottom">
@@ -69,8 +69,7 @@
 </div>
 <div class="right">
 <h1>Cookie Lyon</h1>
-<p>Loretha "Cookie" Lyon (née Holloway) is a fictional character from the American musical drama Empire on Fox. Portrayed by Taraji P. Henson, Cookie is one of the main characters within the series and the ex-wife of former drug dealer turned hip-hop mogul, Lucious Lyon (Terrence Howard) who gets released from prison and strikes out to lay claim to half of Lucious' multimillion-dollar record label, which was initially funded by her drug money.</p>
-
+<p>Cookie Lyon is Lucios Lyon ex-wife, she did wrong things, drug things to help build Empire Records 17 years ago. And lived at prison for all this years, now she is free e wants her half or be the owner with Lucios Lucios, and produce many artists from Empire Records.
 
 </div>
 </div>
